--- a/project.properties
+++ b/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
+target=android-20
 android.library=false
-android.library.reference.1=../../../adt-bundle-windows-x86_64-20130729/OpenCV-2.4.9-android-sdk/sdk/java
+android.library.reference.1=../../../../../OpenCV-2.4.9-android-sdk/sdk/java
