--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-20
 android.library=false
-android.library.reference.1=../../../../../OpenCV-2.4.9-android-sdk/sdk/java
+android.library.reference.1=../../../../../../OpenCV-2.4.9-android-sdk/sdk/java
