--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ bin/resources.ap_
 bin/resources.ap_
 *.apk
 *.dex
+bin/classes/com/allan/imgproc/oliver/OliverActivity.class
+bin/classes/com/allan/imgproc/R$styleable.class
