--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ bin/resources.ap_
 *.dex
 bin/classes/com/allan/imgproc/oliver/OliverActivity.class
 bin/classes/com/allan/imgproc/R$styleable.class
+bin/classes/com/allan/imgproc/oliver/OliverActivity.class
+bin/classes/com/allan/imgproc/oliver/OliverActivity.class
