--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -57,6 +58,4 @@ bin/classes/com/allan/imgproc/oliver/OliverActivity.class
 bin/classes/com/allan/imgproc/R$styleable.class
 bin/classes/com/allan/imgproc/oliver/OliverActivity.class
 bin/classes/com/allan/imgproc/oliver/OliverActivity.class
-*.class
-*.class
-*.class
+*.dex
