--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,13 @@ bin/resources.ap_
 bin/resources.ap_
 *.apk
 *.dex
+bin/ImgProc.apk
+bin/ImgProc.apk
+bin/R.txt
+bin/res/bc/raw/filter.bc
+bin/rsDeps/filter.d
+bin/resources.ap_
+bin/R.txt
+bin/R.txt
+bin/R.txt
+bin/resources.ap_
